--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/coding_events
+spring.datasource.url=jdbc:mysql://localhost:3306/coding_events?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=coding_events
-spring.datasource.password=Learn2code!
+spring.datasource.password=beproductive
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
